--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <head></head>
+
 <body>
-  <h1> Hello world </h1>
-</body>
+  
+  <h1> You're wizzard Harry </h1>
+  <p> harry potter is my.... </p>
+  <h6> hahaha great joke </h6>
+  
+</body
+  
+  <footer></footer>
